--- a/store.html
+++ b/store.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sherlock Holmes | Store</title>
     <meta name="description" content="This is the description">
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="main-header">
