--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="store.html">STORE</a></li>
             </ul>
         </nav>
-        <h1 class="sherlock-name sherlock-header-large">Sherlock Holmes</h1>
+        <h1 class="sherlock-name sherlock-header-large">Sherlock Holmes ....</h1>
         <section class="container">
             <button type="button" class="btn btn-header">Get our Latest Album</button>
         </section>
