make some changes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="store.html">STORE</a></li>
             </ul>
         </nav>
-        <h1 class="sherlock-name sherlock-header-large">Sherlock Holmes ....</h1>
+        <h1 class="sherlock-name sherlock-header-large">Sherlock Holmes</h1>
         <section class="container">
             <button type="button" class="btn btn-header">Get our Latest Album</button>
         </section>
@@ -27,59 +27,40 @@
         <h1 class="section-header">TOURS</h1>
         <section>
             <section class="tour-row">
-                <strong>JUL 16</strong>
-                <span>DETROIT, MI</span>
-                <span>DTE ENERGY MUSIC THEATRE</span>
-                <button type="button">BUY TICKETS</button>
+                <span class="tour-item tour-date">JUL 16</span>
+                <span class="tour-item tour-city">DETROIT, MI</span>
+                <span class="tour-item tour-arena">DTE ENERGY MUSIC THEATRE</span>
+                <button type="button" class="btn tour-item tour-btn btn-primary">BUY TICKETS</button>
             </section>
-            <section>
-                <strong>JUL 19</strong>
-                &lt;&gt;
-                <span>TORONTO, ON</span>
-                &lt;&gt;
-                <span>BUDWEISER STAGE</span>
-                &lt;&gt;
-                <button type="button">BUY TICKETS</button>
-                <hr>
+            <section class="tour-row">
+                <span class="tour-item tour-date">JUL 19</span>
+                <span class="tour-item tour-city">TORONTO, ON</span>
+                <span class="tour-item tour-arena">BUDWEISER STAGE</span>
+                <button type="button" class="btn tour-item tour-btn btn-primary">BUY TICKETS</button>
             </section>
-            <section>
-                <strong>JUL 22</strong>
-                &lt;&gt;
-                <span>BRISTOW, VA</span>
-                &lt;&gt;
-                <span>JIGGY LUBE LIVE</span>
-                &lt;&gt;
-                <button type="button">BUY TICKETS</button>
-                <hr>
+            <section class="tour-row">
+                <span class="tour-item tour-date">JUL 22</span>
+                <span class="tour-item tour-city">BRISTOW, VA</span>
+                <span class="tour-item tour-arena">JIGGY LUBE LIVE</span>
+                <button type="button" class="btn tour-item tour-btn btn-primary">BUY TICKETS</button>
             </section>
-            <section>
-                <strong>JUL 29</strong>
-                &lt;&gt;
-                <span>PHOENIX, AZ</span>
-                &lt;&gt;
-                <span>AK-CHIN PAVILLION</span>
-                &lt;&gt;
-                <button type="button">BUY TICKETS</button>
-                <hr>
+            <section class="tour-row">
+                <span class="tour-item tour-date">JUL 29</span>
+                <span class="tour-item tour-city">PHOENIX, AZ</span>
+                <span class="tour-item tour-arena">AK-CHIN PAVILLION</span>
+                <button type="button" class="btn tour-item tour-btn btn-primary">BUY TICKETS</button>
             </section>
-            <section>
-                <strong>AUG 2</strong>
-                &lt;&gt;
-                <span>LAS VEGAS, NV</span>
-                &lt;&gt;
-                <span>T-MOBILE ARENA</span>
-                &lt;&gt;
-                <button type="button">BUY TICKETS</button>
-                <hr>
+            <section class="tour-row">
+                <span class="tour-item tour-date">AUG 2</span>
+                <span class="tour-item tour-city">LAS VEGAS, NV</span>
+                <span class="tour-item tour-arena">T-MOBILE ARENA</span>
+                <button type="button" class="btn tour-item tour-btn btn-primary">BUY TICKETS</button>
             </section>
-            <section>
-                <strong>AUG 7</strong>
-                &lt;&gt;
-                <span>CONCORD, CA</span>
-                &lt;&gt;
-                <span>CONCORD PAVILLION</span>
-                &lt;&gt;
-                <button type="button">BUY TICKETS</button>
+            <section class="tour-row">
+                <span class="tour-item tour-date">AUG 7</span>
+                <span class="tour-item tour-city">CONCORD, CA</span>
+                <span class="tour-item tour-arena">CONCORD PAVILLION</span>
+                <button type="button" class="btn tour-item tour-btn btn-primary">BUY TICKETS</button>
             </section>
         </section>
     </section>
