--- a/store.html
+++ b/store.html
@@ -20,56 +20,40 @@
         <h1 class="sherlock-name sherlock-header-large">Sherlock Holmes</h1>
     </header>>
     <section>
-        <section>
-            <section>
-                <h2>MUSIC</h2>
-                <section>
-                    <section>
-                        <strong>Season 1</strong>
-                    </section>
+        <section class="container content-section">
+            <h2 class="section-header">MUSIC</h2>
+                <section class="shop-item">
+                    <span class="shop-item-title">Season 1</span>
                     <img src="./images/OIP (1).png" alt="">
-                    <section>
-                        <span>$12.99</span>
-                        <button role="button">ADD TO CART</button>
+                    <section class="shop-item-details">
+                        <span class="shop-item-price">$12.99</span>
+                        <button class="btn btn-primary shop-item-btn" role="button">ADD TO CART</button>
                     </section>
                 </section>
-            </section>
-            <section>
-                <section>
-                    <section>
-                        <strong>Season 2</strong>
-                    </section>
-                    <img src="./images/S2.jpg" alt="">
-                    <section>
-                        <span>$12.99</span>
-                        <button role="button">ADD TO CART</button>
+                <section class="shop-item">
+                    <span class="shop-item-title">Season 2</span>
+                    <img class="shop-item-image" src="./images/S2.jpg" alt="">
+                    <section class="shop-item-details">
+                        <span class="shop-item-price">$12.99</span>
+                        <button class="btn btn-primary shop-item-btn" role="button">ADD TO CART</button>
                     </section>
                 </section>
-            </section>
-            <section>
-                <section>
-                    <section>
-                        <strong>Season 3</strong>
-                    </section>
-                    <img src="./images/R (1).png" alt="">
-                    <section>
-                        <span>$12.99</span>
-                        <button role="button">ADD TO CART</button>
+                <section class="shop-item">
+                    <span class="shop-item-title">Season 3</span>
+                    <img class="shop-item-image" src="./images/R (1).png" alt="">
+                    <section class="shop-item-details">
+                        <span class="shop-item-price">$12.99</span>
+                        <button class="btn btn-primary shop-item-btn" role="button">ADD TO CART</button>
                     </section>
                 </section>
-            </section>
-            <section>
-                <section>
-                    <section>
-                        <strong>Season 4</strong>
-                    </section>
-                    <img src="./images/R (4).png" alt="">
-                    <section>
-                        <span>$12.99</span>
-                        <button role="button">ADD TO CART</button>
+                <section class="shop-item">
+                    <span class="shop-item-title">Season 4</span>
+                    <img class="shop-item-image" src="./images/R (4).png" alt="">
+                    <section class="shop-item-details">
+                        <span class="shop-item-price">$12.99</span>
+                        <button class="btn btn-primary shop-item-btn" role="button">ADD TO CART</button>
                     </section>
                 </section>
-            </section>
         </section>
         <section>
             <h2>MERCH</h2>
