--- a/index.html
+++ b/index.html
@@ -68,9 +68,21 @@
         <section class="container main-footer-container">
             <h3 class="sherlock-name">Sherlock Holmes</h3>
             <ul class="nav footer-nav">
-                <li><a href="https://youtube.com" target="_blank">youtube</a></li>
-                <li><a href="https://spotify.com" target="_blank">spotify</a></li>
-                <li><a href="https://facebook.com" target="_blank">facebook</a></li>
+                <li>
+                    <a href="https://www.youtube.com" target="_blank">
+                        <img src="Images/YouTube Logo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.spotify.com" target="_blank">
+                        <img src="Images/Spotify Logo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com" target="_blank">
+                        <img src="Images/Facebook Logo.png">
+                    </a>
+                </li>
             </ul>
         </section>
     </footer>
